hard-gists/2729506/run.log
=== Docker Run Log for 2729506 ===
Started at: Mi 29. Okt 13:12:44 CET 2025

[2025-10-29 13:12:44] START: Running container for 2729506
[2025-10-29 13:12:45] SUCCESS: Container 98bb72164202faa6b41e5a0ce9b8603e9dd8647c079e178e362e816858a001fe started for 2729506
=== Container logs for 2729506 ===
  File "/snippet.py", line 45
    print response
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2729506 ===
[2025-10-29 13:12:47] INFO: Container 98bb72164202faa6b41e5a0ce9b8603e9dd8647c079e178e362e816858a001fe has stopped
